--- a/Churn_Prediction.ipynb
+++ b/Churn_Prediction.ipynb
@@ -5,9 +5,8 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "mount_file_id": "1-oEXnfHkTGRfeaX1bcFlsg9WU-E56nvf",
-      "authorship_tag": "ABX9TyPpQNI63Gw84pUoa6SIzhOO",
-      "include_colab_link": true
+      "mount_file_id": "https://github.com/nateeatsrice/Churn-Prediction/blob/main/Churn_Prediction.ipynb",
+      "authorship_tag": "ABX9TyP7PrTGJ4v/UL0HQklAgP23"
     },
     "kernelspec": {
       "name": "python3",
@@ -21,23 +20,24 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/nateeatsrice/Churn-Prediction/blob/main/Churn_Prediction.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
+        "cd /content/drive/MyDrive/ML\\ Projects/Churn\\ Prediction/code"
+      ],
+      "metadata": {
+        "id": "2V1tCYhiOkDq"
+      }
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 1,
       "metadata": {
         "id": "TKo4t1j5jv8-"
       },
       "outputs": [],
       "source": [
-        "import pandas as pd"
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as mlt"
       ]
     },
     {
@@ -48,7 +48,7 @@
       "metadata": {
         "id": "Wi2iEBroj0tr"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
