--- a/Churn_Prediction.ipynb
+++ b/Churn_Prediction.ipynb
@@ -4,9 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4",
-      "mount_file_id": "https://github.com/nateeatsrice/Churn-Prediction/blob/main/Churn_Prediction.ipynb",
-      "authorship_tag": "ABX9TyP7PrTGJ4v/UL0HQklAgP23"
+      "mount_file_id": "1V-nQPUkIrTMH6Tk9BKBDKA9qeTZfibol",
+      "authorship_tag": "ABX9TyNPpgzIy/pfYLcS0Ye/vHOp"
     },
     "kernelspec": {
       "name": "python3",
@@ -14,22 +13,23 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "accelerator": "GPU"
+    }
   },
   "cells": [
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        "cd /content/drive/MyDrive/ML\\ Projects/Churn\\ Prediction/code"
+        "%cd /content/drive/MyDrive/ML\\ Projects/Churn-Prediction"
       ],
       "metadata": {
-        "id": "2V1tCYhiOkDq"
-      }
+        "id": "aW9_kPjqzfbG"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "TKo4t1j5jv8-"
       },
@@ -53,7 +53,9 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "!git config --global user.name \"nateeatsrice\""
+      ],
       "metadata": {
         "id": "fOYsBwY4j0qe"
       },
