minor update and added csv file

--- a/Churn_Prediction.ipynb
+++ b/Churn_Prediction.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1V-nQPUkIrTMH6Tk9BKBDKA9qeTZfibol",
-      "authorship_tag": "ABX9TyNPpgzIy/pfYLcS0Ye/vHOp"
+      "authorship_tag": "ABX9TyNom/pTdSBb1wK/xhCEzWnV"
     },
     "kernelspec": {
       "name": "python3",
@@ -22,14 +22,26 @@
         "%cd /content/drive/MyDrive/ML\\ Projects/Churn-Prediction"
       ],
       "metadata": {
-        "id": "aW9_kPjqzfbG"
+        "id": "aW9_kPjqzfbG",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "daa14d6f-d17f-4393-bbac-1704147e3418"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content/drive/MyDrive/ML Projects/Churn-Prediction\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "TKo4t1j5jv8-"
       },
@@ -43,12 +55,12 @@
     {
       "cell_type": "code",
       "source": [
-        "df = pd.read_csv('/content/drive/MyDrive/ML Projects/Churn Prediction/Telco-Customer-Churn.csv')"
+        "df = pd.read_csv('/content/drive/MyDrive/ML Projects/Churn-Prediction/Telco-Customer-Churn.csv')"
       ],
       "metadata": {
         "id": "Wi2iEBroj0tr"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
