Updated docker file and predict.py

--- a/prediction test.ipynb
+++ b/prediction test.ipynb
@@ -13,12 +13,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "5386f704",
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = 'http://localhost:9696/predict'"
+    "url = 'http://localhost:9698/predict'"
    ]
   },
   {
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "f7068be6",
    "metadata": {},
    "outputs": [
@@ -110,13 +110,24 @@
     }
    ],
    "source": [
-    "response = requests.post(url,json=customer).json()\n",
-    "response"
+    "response = requests.post(url,json=customer)\n",
+    "result = response.json()\n",
+    "result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
+   "id": "1cd58291",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(json.dumps(result, indent=2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "070add97",
    "metadata": {},
    "outputs": [
@@ -129,7 +140,7 @@
     }
    ],
    "source": [
-    "if response ['churn'] == True:\n",
+    "if result ['churn'] == True:\n",
     "    print(f'send promo email to {customer[\"customerid\"]}')\n",
     "else:\n",
     "    print(f'do not send promo email to {customer[\"customerid\"]}')"
